--- a/packages/websites/coffeekraken-io/src/fonts/sugar-icons/sugar-fonticon.css
+++ b/packages/websites/coffeekraken-io/src/fonts/sugar-icons/sugar-fonticon.css
@@ -1,13 +1,12 @@
 @font-face {
     font-family: "sugar-fonticon";
-    src: url("./sugar-fonticon.eot?fa11e6accc9d982a83e19d5ba18cf237#iefix") format("embedded-opentype"),
-url("./sugar-fonticon.woff2?fa11e6accc9d982a83e19d5ba18cf237") format("woff2"),
-url("./sugar-fonticon.woff?fa11e6accc9d982a83e19d5ba18cf237") format("woff");
+    src: url("./sugar-fonticon.eot?b50fb6cc0deae9167ee0495df8686204#iefix") format("embedded-opentype"),
+url("./sugar-fonticon.woff2?b50fb6cc0deae9167ee0495df8686204") format("woff2"),
+url("./sugar-fonticon.woff?b50fb6cc0deae9167ee0495df8686204") format("woff");
 }
 
-.s-icon--display-preview:before,.s-icon--file-css:before,.s-icon--file-html:before,.s-icon--file-js:before,.s-icon--file-md:before,.s-icon--file-php:before,.s-icon--file-ts:before,.s-icon--folder-opened:before,.s-icon--folder:before,.s-icon--lang-css:before,.s-icon--lang-html:before,.s-icon--lang-js:before,.s-icon--lang-md:before,.s-icon--lang-php:before,.s-icon--lang-ts:before,.s-icon--support-chromium:before,.s-icon--support-edge:before,.s-icon--support-firefox:before,.s-icon--support-rtl:before,.s-icon--support-safari:before,.s-icon--vue:before {
+.s-icon--autocomplete:before,.s-icon--brand-coffeekraken:before,.s-icon--brand-lit:before,.s-icon--code:before,.s-icon--copy:before,.s-icon--datepicker:before,.s-icon--display-preview:before,.s-icon--file-css:before,.s-icon--file-html:before,.s-icon--file-js:before,.s-icon--file-md:before,.s-icon--file-php:before,.s-icon--file-ts:before,.s-icon--folder-opened:before,.s-icon--folder:before,.s-icon--lang-css:before,.s-icon--lang-html:before,.s-icon--lang-js:before,.s-icon--lang-md:before,.s-icon--lang-php:before,.s-icon--lang-ts:before,.s-icon--range:before,.s-icon--support-chromium:before,.s-icon--support-edge:before,.s-icon--support-firefox:before,.s-icon--support-rtl:before,.s-icon--support-safari:before,.s-icon--vue:before {
 position: relative;
-top:0.2em;
 
     font-family: sugar-fonticon !important;
     font-style: normal;
@@ -19,66 +18,93 @@ top:0.2em;
     -moz-osx-font-smoothing: grayscale;
 }
 
-.s-icon--display-preview:before {
+.s-icon--autocomplete:before {
     content: "\f101";
 }
-.s-icon--file-css:before {
+.s-icon--brand-coffeekraken:before {
     content: "\f102";
 }
-.s-icon--file-html:before {
+.s-icon--brand-lit:before {
     content: "\f103";
 }
-.s-icon--file-js:before {
+.s-icon--code:before {
     content: "\f104";
 }
-.s-icon--file-md:before {
+.s-icon--copy:before {
     content: "\f105";
 }
-.s-icon--file-php:before {
+.s-icon--datepicker:before {
     content: "\f106";
 }
-.s-icon--file-ts:before {
+.s-icon--display-preview:before {
     content: "\f107";
 }
-.s-icon--folder-opened:before {
+.s-icon--file-css:before {
     content: "\f108";
 }
-.s-icon--folder:before {
+.s-icon--file-html:before {
     content: "\f109";
 }
-.s-icon--lang-css:before {
+.s-icon--file-js:before {
     content: "\f10a";
 }
-.s-icon--lang-html:before {
+.s-icon--file-md:before {
     content: "\f10b";
 }
-.s-icon--lang-js:before {
+.s-icon--file-php:before {
     content: "\f10c";
 }
-.s-icon--lang-md:before {
+.s-icon--file-ts:before {
     content: "\f10d";
 }
-.s-icon--lang-php:before {
+.s-icon--folder-opened:before {
     content: "\f10e";
 }
-.s-icon--lang-ts:before {
+.s-icon--folder:before {
     content: "\f10f";
 }
-.s-icon--support-chromium:before {
+.s-icon--lang-css:before {
     content: "\f110";
 }
-.s-icon--support-edge:before {
+.s-icon--lang-html:before {
     content: "\f111";
 }
-.s-icon--support-firefox:before {
+.s-icon--lang-js:before {
     content: "\f112";
 }
-.s-icon--support-rtl:before {
+.s-icon--lang-md:before {
     content: "\f113";
 }
-.s-icon--support-safari:before {
+.s-icon--lang-php:before {
     content: "\f114";
 }
-.s-icon--vue:before {
+.s-icon--lang-ts:before {
     content: "\f115";
+}
+.s-icon--range:before {
+    content: "\f116";
+}
+.s-icon--support-chromium:before {
+    content: "\f117";
+}
+.s-icon--support-edge:before {
+    content: "\f118";
+}
+.s-icon--support-firefox:before {
+    content: "\f119";
+}
+.s-icon--support-rtl:before {
+    content: "\f11a";
+}
+.s-icon--support-safari:before {
+    content: "\f11b";
+}
+.s-icon--vue:before {
+    content: "\f11c";
+}
+.s-icon--autocomplete,.s-icon--brand-coffeekraken,.s-icon--brand-lit,.s-icon--code,.s-icon--copy,.s-icon--datepicker,.s-icon--display-preview,.s-icon--file-css,.s-icon--file-html,.s-icon--file-js,.s-icon--file-md,.s-icon--file-php,.s-icon--file-ts,.s-icon--folder-opened,.s-icon--folder,.s-icon--lang-css,.s-icon--lang-html,.s-icon--lang-js,.s-icon--lang-md,.s-icon--lang-php,.s-icon--lang-ts,.s-icon--range,.s-icon--support-chromium,.s-icon--support-edge,.s-icon--support-firefox,.s-icon--support-rtl,.s-icon--support-safari,.s-icon--vue {
+display: inline-block;
+line-height: 1;
+width: 1em;
+height:1em;
 }
