--- a/packages/websites/coffeekraken-io/src/css/generic/icon-card.css
+++ b/packages/websites/coffeekraken-io/src/css/generic/icon-card.css
@@ -1,43 +1,68 @@
 .icon-card {
     aspect-ratio: 1;
     position: relative;
-    background: sugar.color(accent);
     border-radius: sugar.border.radius();
     @sugar.depth (100);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+    background-size: cover;
+    background-position: 50% 50%;
+    filter: grayscale(0.1);
+    overflow: hidden;
 
-    > div {
-        position: relative;
-        z-index: 1;
+    i,
+    p {
+        transition: all 0.3s sugar.theme(easing.default);
+        transform-origin: -100% 100%;
+        text-shadow: 0 0 5px sugar.color(current, --darken 10 --alpha 0.3);
+        text-align: center;
+        color: sugar.color(current, foreground);
     }
 
     i {
         font-size: 100px;
-        margin-block-end: sugar.margin(20);
+        position: absolute;
+        z-index: 1;
+        top: calc(50% - 20px);
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
     p {
+        position: absolute;
+        z-index: 1;
+        top: calc(50% + 50px);
+        left: 50%;
+        transform: translate(-50%, -50%);
+        transition-duration: 0.3s;
+        transition-delay: 0.15s;
     }
 
     &:after {
-        opacity: 0;
-        border-radius: sugar.border.radius();
-        overflow: hidden;
+        opacity: 1;
         content: '';
         position: absolute;
         top: 0;
         left: 0;
-        width: 100%;
-        height: 100%;
-        background-image: url(/src/img/icon-card/test.gif);
-        background-size: cover;
-        background-position: 50% 50%;
-        transition: opacity 0.3s ease-out;
+        width: 200%;
+        height: 200%;
+        transform-origin: 0 0;
+        transform: translateX(30%) translateY(-30%) rotateZ(45deg);
+        transition: all 0.3s sugar.theme(easing.default);
+        background-color: sugar.color(current);
     }
 
-    &:hover:after {
-        opacity: 1;
+    &[style] {
+        &:hover i {
+            transform: scale(0.3) translate(-50%, -50%);
+            top: calc(55%);
+            left: 45%;
+        }
+
+        &:hover p {
+            opacity: 0;
+            top: calc(50% + 70px);
+            transition-delay: 0s;
+        }
+        &:hover:after {
+            transform: translateX(-25%) translateY(0%) rotateZ(45deg);
+        }
     }
 }
