--- a/packages/websites/coffeekraken-io/src/views/layouts/header/header.css
+++ b/packages/websites/coffeekraken-io/src/views/layouts/header/header.css
@@ -13,7 +13,7 @@ body {
     display: flex;
     align-items: center;
     background: sugar.color(main, --alpha 0);
-    transition: all ease-in-out 0.2s;
+    transition: all sugar.theme(easing.default) 0.6s;
     @sugar.depth (0);
     background: sugar.color(main, surface);
     border-radius: sugar.border.radius();
