--- a/packages/websites/coffeekraken-io/src/css/generic/ck-blob.css
+++ b/packages/websites/coffeekraken-io/src/css/generic/ck-blob.css
@@ -12,7 +12,7 @@ ck-blob {
         top: 0;
         left: 0;
         width: 100%;
-        filter: brightness(100%) saturate(100%);
+        /* filter: brightness(100%) saturate(100%); */
         height: 100%;
         transition: all 0.5s ease-in-out;
     }
