--- a/packages/websites/coffeekraken-io/src/views/layouts/header/header.css
+++ b/packages/websites/coffeekraken-io/src/views/layouts/header/header.css
@@ -1,7 +1,3 @@
-body {
-    padding-top: 100px;
-}
-
 #header {
     position: fixed;
     top: 50px;
@@ -14,10 +10,10 @@ body {
     align-items: center;
     background: sugar.color(main, --alpha 0);
     transition: all sugar.theme(easing.default) 0.6s;
-    @sugar.depth (0);
+    @sugar.depth (100);
     background: sugar.color(main, surface);
     border-radius: sugar.border.radius();
-    box-shadow: 5px 20px 30px rgba(0, 0, 0, 0.03);
+    /* box-shadow: 5px 20px 30px rgba(0, 0, 0, 0.03); */
     background: linear-gradient(
         90deg,
         sugar.color(main, --darken 46),
