--- a/packages/websites/coffeekraken-io/src/views/pages/homepage/welcome/welcome.css
+++ b/packages/websites/coffeekraken-io/src/views/pages/homepage/welcome/welcome.css
@@ -38,9 +38,11 @@
         width: 1280px;
         height: 720px;
         z-index: 10;
-        top: 90px;
+        top: 100px;
         left: calc(50% - 250px);
         transform: scale(1);
+
+        /* filter: brightness(120%); */
 
         .__loader {
             position: absolute;
@@ -51,10 +53,10 @@
 
         > * {
             position: absolute;
-            filter: drop-shadow(20px 20px 30px rgba(0, 0, 0, 0.07));
+            /* filter: drop-shadow(20px 20px 30px rgba(0, 0, 0, 0.07)); */
 
             @sugar.theme.when dark {
-                filter: drop-shadow(20px 20px 30px rgba(0, 0, 0, 0.1));
+                filter: drop-shadow(20px 20px 30px rgba(81, 1, 255, 0.1));
             }
         }
     }
