--- a/packages/components/s-color-picker-component/index.html
+++ b/packages/components/s-color-picker-component/index.html
@@ -13,6 +13,10 @@
 
             define();
         </script>
-        <s-color-picker color="#ffff00" />
+        <s-color-picker value="#ffff00"></s-color-picker>
+
+        <s-color-picker no-preview>
+            <input type="text" value="#ff000f" />
+        </s-color-picker>
     </body>
 </html>
