--- a/packages/components/s-color-picker-component/src/css/s-color-picker.css
+++ b/packages/components/s-color-picker-component/src/css/s-color-picker.css
@@ -2,9 +2,85 @@ s-color-picker {
     &:not([mounted]) > * {
         display: none;
     }
+
+    .s-color-picker {
+        display: flex;
+        position: relative;
+        align-items: center;
+    }
+
+    .s-color-picker--top .s-color-picker__picker {
+        position: absolute !important;
+        top: auto !important;
+        right: 0 !important;
+        left: auto !important;
+        bottom: 100% !important;
+        pointer-events: all !important;
+    }
+    .s-color-picker--bottom .s-color-picker__picker {
+        position: absolute !important;
+        top: 100% !important;
+        right: 0 !important;
+        left: auto !important;
+        pointer-events: all !important;
+    }
+
+    &[no-preview] .s-color-picker__picker-wrapper,
+    &[no-preview] .s-color-picker__preview {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+
+        button {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            background: none !important;
+            pointer-events: none;
+
+            &:before,
+            &:after {
+                content: initial;
+            }
+        }
+    }
+}
+
+.s-color-picker__input {
+    /* border-top-right-radius: 0 !important;
+    border-bottom-right-radius: 0 !important; */
+
+    /* :not([bare]) & ~ .s-color-picker__preview {
+        display: block;
+        aspect-ratio: 1;
+        height: 100%;
+
+        button {
+            width: 100% !important;
+            height: 100% !important;
+
+            &,
+            &:before,
+            &:after {
+                border-top-left-radius: 0 !important;
+                border-bottom-left-radius: 0 !important;
+            }
+        }
+    } */
 }
 
 .s-color-picker__picker {
+    position: absolute !important;
+    top: 100% !important;
+    right: 0 !important;
+    left: auto !important;
+    z-index: 10;
+
     :not([bare]) & {
         background: sugar.color(current, surface);
         overflow: hidden;
@@ -18,24 +94,23 @@ s-color-picker {
 .pickr.s-color-picker__preview {
     display: inline-block;
     outline: none;
-    border-radius: 0 !important;
 
     :not([bare]) & {
         transition: sugar.transition(fast);
     }
 
-    button:focus {
+    /* button:focus {
         display: none;
-    }
+    } */
 
     button {
         width: 1em;
         height: 1em;
-        border-radius: 0 !important;
+        border-radius: sugar.border.radius();
 
         &:before,
         &:after {
-            border-radius: 0 !important;
+            border-radius: sugar.border.radius();
         }
     }
 }
