--- a/packages/components/s-code-example-component/index.html
+++ b/packages/components/s-code-example-component/index.html
@@ -29,5 +29,20 @@
                 <p>iwfj wioef oiw efjoijw oiefjw ioefjwiofj oij</p>
             </template>
         </s-code-example>
+
+        <s-code-example toolbar-position="nav" lines="3">
+            <template lang="js">
+                import __SClass from '@coffeekraken/s-class'; import __deepMerge
+                from '@coffeekraken/sugar/shared/object/deepMerge'; import
+                __SInterface from '@coffeekraken/s-interface'; import __mustache
+                from 'mustache'; import __stylesheetToString from
+                '@coffeekraken/sugar/js/css/stylesheetToString'; export default
+                SSVelteComponent;
+            </template>
+            <template lang="html">
+                <h1>Something cool</h1>
+                <p>iwfj wioef oiw efjoijw oiefjw ioefjwiofj oij</p>
+            </template>
+        </s-code-example>
     </body>
 </html>
