--- a/packages/websites/coffeekraken-io/src/css/generic/s-color-picker.css
+++ b/packages/websites/coffeekraken-io/src/css/generic/s-color-picker.css
@@ -3,7 +3,9 @@
         position: absolute;
         right: sugar.padding(20);
     }
-    .s-color-picker__preview {
-        filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.5));
+    @sugar.theme.when dark {
+        .s-color-picker__preview {
+            filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.5));
+        }
     }
 }
