--- a/packages/components/s-color-picker-component/index.html
+++ b/packages/components/s-color-picker-component/index.html
@@ -16,7 +16,9 @@
         <s-color-picker value="#ffff00"></s-color-picker>
 
         <s-color-picker no-preview>
-            <input type="text" value="#ff000f" />
+            <input type="text" class="s-input" value="#ff000f" />
         </s-color-picker>
+
+        <s-color-picker no-input> </s-color-picker>
     </body>
 </html>
