--- a/packages/components/s-date-picker-component/index.html
+++ b/packages/components/s-date-picker-component/index.html
@@ -24,7 +24,9 @@
                     min-date="2021-08-10"
                     max-date="2021-08-20"
                     name="myDatePicker2"
-                ></s-date-picker>
+                >
+                    <input type="text" class="s-input" />
+                </s-date-picker>
             </label>
 
             <label class="s-label s-mb--30">
@@ -54,6 +56,7 @@
                     placeholder="Select a date"
                     class="s-color--success s-width--50"
                     name="myDatePicker4"
+                    input
                     number-of-months="2"
                 ></s-date-picker>
             </label>
@@ -64,6 +67,7 @@
                     placeholder="Select a date"
                     class="s-color--error s-width--50"
                     name="myDatePicker5"
+                    input
                     calendar-icon="<?xml version='1.0' encoding='iso-8859-1'?>
 <svg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 488.901 488.901' style='enable-background:new 0 0 488.901 488.901;' xml:space='preserve'><g><g><g><path fill='currentColor' d='M468.9,56.1h-76.2v-36c0-10.6-9.5-20.1-20.1-20.1s-20.1,8.5-20.1,20.1v36H136.6v-36c0-10.6-9.5-20.1-20.1-20.1
 				S96.4,8.5,96.4,20.1v36H20.1C9.5,56.1,0,64.6,0,76.2v392.6c0,10.6,8.5,20.1,20.1,20.1h329.1c5.3,0,9.5-1.1,13.8-5.3l119.6-111.1
