--- a/packages/websites/coffeekraken-io/src/views/pages/homepage/welcome/welcome.css
+++ b/packages/websites/coffeekraken-io/src/views/pages/homepage/welcome/welcome.css
@@ -55,9 +55,9 @@
             position: absolute;
             /* filter: drop-shadow(20px 20px 30px rgba(0, 0, 0, 0.07)); */
 
-            @sugar.theme.when dark {
+            /* @sugar.theme.when dark {
                 filter: drop-shadow(20px 20px 30px rgba(81, 1, 255, 0.1));
-            }
+            } */
         }
     }
 
