--- a/packages/websites/coffeekraken-io/src/css/generic/ck-blob.css
+++ b/packages/websites/coffeekraken-io/src/css/generic/ck-blob.css
@@ -15,6 +15,7 @@ ck-blob {
         /* filter: brightness(100%) saturate(100%); */
         height: 100%;
         transition: all 0.5s ease-in-out;
+        /* transform: scale(1); */
     }
 
     /* &:hover {
