--- a/packages/websites/coffeekraken-io/src/views/pages/homepage/welcome/welcome.css
+++ b/packages/websites/coffeekraken-io/src/views/pages/homepage/welcome/welcome.css
@@ -1,3 +1,31 @@
+.__bgGradient {
+    position: fixed;
+    width: 720px;
+    height: 720px;
+    z-index: 1;
+    top: 100px;
+    background: sugar.color(accent);
+    filter: blur(200px);
+    border-radius: 9999px;
+    left: calc(50% - 250px);
+    mix-blend-mode: overlay;
+    opacity: 0.2;
+}
+
+.__bgGradient1 {
+    position: fixed;
+    width: 720px;
+    height: 720px;
+    z-index: 1;
+    top: 100px;
+    background: sugar.color(complementary);
+    filter: blur(200px);
+    border-radius: 9999px;
+    left: calc(50% + 250px);
+    mix-blend-mode: overlay;
+    opacity: 0.1;
+}
+
 #homepage-welcome {
     height: 100vh;
     text-align: left;
@@ -31,35 +59,6 @@
         @sugar.theme.when dark {
             background-image: url('/src/img/welcome/welcome-bg-01.jpg');
         }
-    }
-
-    .__bgGradient {
-        position: absolute;
-        width: 720px;
-        height: 720px;
-        z-index: 10;
-        top: 100px;
-        background: sugar.color(accent);
-        filter: blur(200px);
-        border-radius: 9999px;
-        left: calc(50% - 250px);
-        transform: scale(1);
-        mix-blend-mode: overlay;
-        opacity: 0.3;
-    }
-    .__bgGradient1 {
-        position: absolute;
-        width: 720px;
-        height: 720px;
-        z-index: 10;
-        top: 100px;
-        background: sugar.color(complementary);
-        filter: blur(200px);
-        border-radius: 9999px;
-        left: calc(50% + 250px);
-        transform: scale(1);
-        mix-blend-mode: overlay;
-        opacity: 0.3;
     }
 
     .__illustration {
