--- a/packages/websites/coffeekraken-io/src/views/pages/homepage/features/features.css
+++ b/packages/websites/coffeekraken-io/src/views/pages/homepage/features/features.css
@@ -104,7 +104,7 @@
         }
     }
 
-    #features-development:before,
+    /* #features-development:before,
     #features-webcomponents:before {
         content: '';
         position: absolute;
@@ -119,7 +119,7 @@
             sugar.color(complementary, --alpha 0)
         ) !important;
         z-index: -1;
-    }
+    } */
 
     /* .section-top-background {
         position: absolute;
@@ -144,7 +144,7 @@
         }
     }
 
-    #features-frontend:before,
+    /* #features-frontend:before,
     #features-sugar:before {
         content: '';
         position: absolute;
@@ -160,5 +160,5 @@
             sugar.color(accent, --alpha 0)
         ) !important;
         z-index: -1;
-    }
+    } */
 }
