--- a/packages/websites/coffeekraken-io/src/views/layouts/main.css
+++ b/packages/websites/coffeekraken-io/src/views/layouts/main.css
@@ -6,3 +6,61 @@
 #homepage .content {
     padding-top: 0;
 }
+
+.bg {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    opacity: 0.05;
+    pointer-events: none;
+
+    @sugar.theme.when (dark) {
+        opacity: 0.1;
+    }
+
+    &:after {
+        content: '';
+        background: sugar.filter.noise();
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        filter: invert();
+        mix-blend-mode: multiply;
+    }
+
+    .__gradient1 {
+        position: fixed;
+        width: 720px;
+        height: 720px;
+        z-index: 1;
+        top: 100px;
+        background: sugar.color(accent);
+        filter: blur(200px);
+        border-radius: 9999px;
+        left: calc(50% - 250px);
+        mix-blend-mode: overlay;
+        opacity: 0.8;
+    }
+
+    .__gradient2 {
+        position: fixed;
+        width: 720px;
+        height: 720px;
+        z-index: 1;
+        top: 100px;
+        background: sugar.color(complementary);
+        filter: blur(200px);
+        border-radius: 9999px;
+        left: calc(50% + 250px);
+        mix-blend-mode: overlay;
+        opacity: 0.2;
+
+        @sugar.theme.when (dark) {
+            opacity: 1;
+        }
+    }
+}
